--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,16 @@ edition = "2018"
 
 [features]
 default = ["rt"]
-rt = ["atmega328pb-hal/rt"]
+rt = ["atmega328p-hal/rt"]
 
 [dependencies]
-atmega328pb-hal = { path = "../avr-hal/chips/atmega328pb-hal" }
+atmega328p-hal = { path = "../avr-hal/chips/atmega328p-hal", features = ["atmega328pb"] }
 avr-hal-generic = { path = "../avr-hal/avr-hal-generic" }
 
 [dev-dependencies]
 panic-halt = "0.2.0"
 nb = "0.1.2"
 ufmt = "0.1.0"
-avr-device = { path = "../avr-device" }
 
 [profile.dev]
 panic = "abort"
