--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ rt = ["atmega328p-hal/rt"]
 [dependencies]
 atmega328p-hal = { path = "../avr-hal/chips/atmega328p-hal", features = ["atmega328pb"] }
 avr-hal-generic = { path = "../avr-hal/avr-hal-generic" }
+ufmt = "0.1.0"
+infrared ="0.7.0"
 
 [dev-dependencies]
 panic-halt = "0.2.0"
 nb = "0.1.2"
-ufmt = "0.1.0"
 
 [profile.dev]
 panic = "abort"
