Make avr-hal a git dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,7 @@ default = ["rt"]
 rt = ["atmega328p-hal/rt"]
 
 [dependencies]
-atmega328p-hal = { path = "../avr-hal/chips/atmega328p-hal", features = ["atmega328pb"] }
-avr-hal-generic = { path = "../avr-hal/avr-hal-generic" }
+atmega328p-hal = { git = "https://github.com/jkristell/avr-hal.git", branch = "reexport-generic-hal", features = ["atmega328pb"] }
 ufmt = "0.1.0"
 infrared ="0.7.0"
 
